--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-card-rotate-swiper": "^0.0.14",
     "react-dom": "18.0.0",
     "styled-components": "^5.3.5"
   },
